<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marg_10"
        android:orientation="horizontal"
        android:weightSum="1">

        <android.support.v7.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/marg_10"
            android:layout_weight="0.3"
            card_view:cardCornerRadius="@dimen/marg_3"
            card_view:cardElevation="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/marg_20">


                <TextView
                    android:id="@+id/txt_invoice_total_rs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:paddingTop="@dimen/marg_10"
                    android:paddingBottom="@dimen/marg_10"
                    android:text="@string/total"
                    android:textColor="@color/black"
                    android:textSize="@dimen/txt_18" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/black" />

                <TextView
                    android:id="@+id/txt_invoice_total_km"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:paddingTop="@dimen/marg_10"
                    android:paddingBottom="@dimen/marg_10"
                    android:text="1101"
                    android:textColor="@color/black"
                    android:textSize="@dimen/txt_18" />

            </LinearLayout>
        </android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/marg_10"
            android:layout_weight="0.7"
            card_view:cardCornerRadius="@dimen/marg_3"
            card_view:cardElevation="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:padding="@dimen/marg_10">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:foreground="?android:selectableItemBackground"
                    android:orientation="horizontal"
                    android:paddingBottom="@dimen/marg_10">


                    <TextView

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:padding="@dimen/marg_10"
                        android:text="@string/assign"
                        android:textColor="@color/black"
                        android:textSize="@dimen/txt_18" />

                    <TextView

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:padding="@dimen/marg_10"
                        android:text="1000"
                        android:textColor="@color/black"
                        android:textSize="@dimen/txt_18" />


                </LinearLayout>


                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/black" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/marg_5"
                    android:foreground="?android:selectableItemBackground"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:padding="@dimen/marg_10"
                        android:text="@string/not_assign"
                        android:textColor="@color/black"
                        android:textSize="@dimen/txt_18" />

                    <TextView

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:padding="@dimen/marg_10"
                        android:text="101"
                        android:textColor="@color/black"
                        android:textSize="@dimen/txt_18" />


                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/marg_10"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/marg_5"
            card_view:cardCornerRadius="@dimen/marg_3"
            card_view:cardElevation="10dp">

            <TextView
                android:id="@+id/add"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableRight="@drawable/ic_add"
                android:padding="@dimen/marg_10"
                android:text="@string/add"
                android:textSize="@dimen/txt_18" />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/marg_5"
            card_view:cardCornerRadius="@dimen/marg_3"
            card_view:cardElevation="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableRight="@drawable/ic_upload"
                android:padding="@dimen/marg_10"
                android:text="@string/upload"
                android:textSize="@dimen/txt_18" />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/marg_5"
            card_view:cardCornerRadius="@dimen/marg_3"
            card_view:cardElevation="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableRight="@drawable/ic_download"
                android:padding="@dimen/marg_10"
                android:text="@string/download"
                android:textSize="@dimen/txt_18" />

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/marg_5"
            card_view:cardCornerRadius="@dimen/marg_3"
            card_view:cardElevation="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="@dimen/marg_10"
                android:text="@string/receive"
                android:textSize="@dimen/txt_18" />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/marg_5"
            card_view:cardCornerRadius="@dimen/marg_3"
            card_view:cardElevation="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="@dimen/marg_10"
                android:text="@string/send"
                android:textSize="@dimen/txt_18" />
        </android.support.v7.widget.CardView>

    </LinearLayout>

</LinearLayout>