<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".login.LoginActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:gravity="center"
        android:orientation="vertical">


        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/marg_15"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:src="@drawable/aksharderi" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:layout_gravity="center"
                android:textSize="@dimen/txt_20"
                android:textColor="@color/colorAccent"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/colorAccent">

                <EditText
                    android:id="@+id/email_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:drawableLeft="@drawable/ic_person"
                    android:drawablePadding="@dimen/marg_10"
                    android:hint=" Email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:nextFocusDown="@id/password_login"
                    android:paddingRight="10dp"
                    android:singleLine="true"
                    android:textColor="@color/colorAccent"
                    android:textColorHint="@color/colorAccent" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/colorAccent">

                <EditText
                    android:id="@+id/password_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:drawableLeft="@drawable/ic_lock"
                    android:drawablePadding="@dimen/marg_10"
                    android:hint=" Password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:paddingRight="10dp"
                    android:singleLine="true"
                    android:textColor="@color/colorAccent"
                    android:textColorHint="@color/colorAccent" />

            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="@dimen/marg_10">
                <Button
                    android:id="@+id/login"
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/marg_10"
                    android:text="@string/login"
                    android:background="@color/colorPrimary"
                    android:textColor="@color/white"
                    android:textSize="@dimen/txt_18" />

                <Button
                    android:id="@+id/signup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="@dimen/marg_10"
                    android:text="@string/signup"
                    android:background="@color/colorPrimary"
                    android:textColor="@color/white"
                    android:textSize="@dimen/txt_18" />

            </LinearLayout>


        </LinearLayout>
</LinearLayout>