<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tool="http://schemas.android.com/tools"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddPrasangamActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/marg_10"
        android:layout_weight="1"
        android:gravity="bottom"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/llTextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/marg_5"
            android:visibility="gone">


            <EditText
                android:id="@+id/edtText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="bottom"
                android:hint="@string/text_hint"
                android:visibility="visible" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llImageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/marg_5"
            android:visibility="gone">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/file_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:outlineAmbientShadowColor="@color/cardview_dark_background"
                app:layout_constraintBottom_toBottomOf="parent"
                tool:listitem="@layout/file_list_item" />

            <ImageView
                android:id="@+id/imgImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:src="@drawable/ic_launcher_background"
                android:visibility="gone" />
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/rlSpeechView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="visible">
            <TextView
                android:id="@+id/tvLanguageSelect"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/language"
                android:padding="@dimen/marg_5"
                android:background="@drawable/edittext_boarder"
                android:textColor="@color/black"/>
            <EditText
                android:id="@+id/txvResult"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="150dp"
                android:layout_marginTop="@dimen/marg_35"
                android:layout_below="@+id/tvLanguageSelect"
                android:background="@drawable/edittext_boarder"
                android:focusable="true"
                android:gravity="top"
                android:padding="@dimen/marg_5"
                android:textSize="20sp"
                android:textStyle="normal" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="@dimen/marg_20"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/btnSpeak"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:gravity="center"
                    android:onClick="getSpeechInput"
                    android:src="@drawable/ic_mic_black_24dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tap_on_mic"
                    android:textColor="@color/black"
                    android:textSize="15dp"
                    android:textStyle="normal" />
            </LinearLayout>


        </RelativeLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/marg_10"
        android:layout_weight="0.1"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvSelectText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_text_format_black_24dp" />

        <TextView
            android:id="@+id/tvSelectImage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_image_theme_24dp" />


        <TextView
            android:id="@+id/tvSelectDocs"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_attach_file_black_24dp" />


        <TextView
            android:id="@+id/tvSelectAudio"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_audiotrack_black_24dp" />

        <TextView
            android:id="@+id/tvSelectVideo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_videocam_black_24dp" />

        <TextView
            android:id="@+id/tvSelectSpeech"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_mic_black_24dp" />

        <TextView
            android:id="@+id/tvSelectSend"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_upward_arrow_48" />


    </LinearLayout>
</LinearLayout>